fixed spacing of add new car form

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -122,6 +122,7 @@ section.register {
   padding: 50px 0px 15px 0px;
 }
 
+/*add new car form*/
 form{
   font-family: disco;
   border-radius: 3px;
@@ -131,7 +132,16 @@ input{
   outline-color: #2D3142;
   text-align: center;
   border-radius: 5px; 
+  margin-bottom: 20px;
+
 }
+
+.add-new-car {
+  margin-top: 200px;
+}
+
+
+
 
 
 
